[package]
name = "app"
version = "1.0.0"
authors = ["Baidu"]
build = "build.rs"

[dependencies]
sgx_types = { rev = "v1.1.3",  git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/baidu/rust-sgx-sdk.git" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "1.0.2"
